--- a/Proyecto1/css/styles.css
+++ b/Proyecto1/css/styles.css
@@ -4,3 +4,15 @@ body
     text-align: center;
     font-family: "Franklin Gothic Medium";
 }
+#container
+{
+    width: 70%;
+    padding: lem;
+    text-align: left;
+    border: 1px solid rgb(241, 237, 237);
+    margin: 0 auto;
+}
+#container h1
+{
+    font-size: 20px;
+}
