--- a/Proyecto1/css/styles.css
+++ b/Proyecto1/css/styles.css
@@ -16,3 +16,12 @@ body
 {
     font-size: 20px;
 }
+#cabecera
+{
+    background: #88f;
+    color: white;
+    font-weight: bold;
+    margin: 0;
+    padding: 0.5em;
+
+}
